<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Port Knocker</string>
    <string name="widget1x1_name">Port Knocker 1x1</string>
    <string name="widget2x1_name">Port Knocker 2x1</string>
    <string name="widget3x1_name">Port Knocker 3x1</string>
    <string name="widget4x1_name">Port Knocker 4x1</string>
    <string name="host_tab_name">Host</string>
    <string name="ports_tab_name">Ports</string>
    <string name="misc_tab_name">Other</string>
    <string name="host_label_label">Label</string>
    <string name="host_label_hint">Label</string>
    <string name="host_name_label">Hostname/IP</string>
    <string name="host_name_hint">domain.com/192.168.10.1</string>
    <string name="port_label">Port</string>
    <string name="port_hint">1234</string>
    <string name="protocol_label">Protocol</string>
    <string name="delay_label">Delay Between Packets (ms)</string>
    <string name="delay_hint">1000</string>
    <string name="launch_app_label">Launch Application</string>
    <string name="launch_app_list_default">None</string>
    <string name="tcp_timeout_label">TCP Connect Timeout (ms)</string>
    <string name="confirm_dialog_confirm">Yes</string>
    <string name="confirm_dialog_cancel">No</string>
    <string name="confirm_dialog_delete_host_title">Delete host?</string>
    <string name="confirm_dialog_cancel_edit_title">Discard changes?</string>
    <string name="progress_dialog_retrieving_applications">Retrieving applications&#8230;</string>
    <string name="progress_dialog_sending_packets">Sending packets&#8230;</string>
    <string name="pref_key_hide_ports">hide_ports</string>
    <string name="pref_key_hide_ports_title">Hide ports in host list</string>
    <string name="pref_key_hide_ports_summary">Port sequence will not be displayed in the host list</string>
    <string name="pref_key_hide_ports_widget">hide_ports_widget</string>
    <string name="pref_key_hide_ports_widget_title">Hide ports in widget</string>
    <string name="pref_key_hide_ports_widget_summary">Port sequence will not be displayed in widgets</string>
    <string name="pref_key_hide_ports_category_title">Miscellaneous</string>
    <string name="settings_subtitle">Settings</string>
    <string name="empty_list">There are no items</string>
    <string name="toast_msg_delete_all_ports">"Can't delete all ports"</string>
    <string name="toast_msg_enter_label">Please enter a label</string>
    <string name="toast_msg_enter_hostname">Please enter a hostname</string>
    <string name="toast_msg_invalid_hostname">Invalid hostname/IP</string>
    <string name="toast_msg_enter_port">Please enter at least one port</string>
    <string name="toast_msg_delay_max_value">"Delay can't be more than "</string>
    <string name="toast_msg_invalid_port">"Invalid port: "</string>
    <string name="toast_msg_save_success">Saved</string>
    <string name="toast_msg_save_failure">Save failed</string>
    <string name="toast_msg_knocking_complete">Knocking complete</string>
    <string name="toast_msg_knocking_canceled">Knocking canceled</string>
    <string name="toast_msg_knocking_failed">"Knocking failed: "</string>
    <string name="toast_msg_import_from_file_success">"Imported hosts from file: "</string>
    <string name="toast_msg_import_error">"Importing hosts failed: "</string>
    <string name="toast_msg_no_permission_for_external_mem_access">No permission to access external memory.</string>
    <string name="menu_item_settings_title">Settings</string>
    <string name="menu_item_export_title">Export Hosts</string>
    <string name="menu_item_import_title">Import Hosts</string>
    <string name="menu_item_send_title">Send Hosts</string>
    <string name="menu_item_sort_title">Sort Hosts</string>
    <string name="menu_item_sort_hostname_title">By hostname</string>
    <string name="menu_item_sort_label_title">By label</string>
    <string name="menu_item_sort_newest_title">By newest</string>
    <string name="export_host_dialog_title">Export Hosts</string>
    <string name="export_host_dialog_message">Enter filename</string>
    <string name="export_host_dialog_ok_button">OK</string>
    <string name="export_host_dialog_cancel_button">Cancel</string>
    <string name="export_host_dialog_export_complete">"Exported hosts to file: "</string>
    <string name="export_host_dialog_export_failure">"Exporting hosts failed: "</string>
    <string name="share_dialog_chooser_title">"Share with... "</string>
</resources>