<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_item_settings"
        android:title="@string/menu_item_settings_title"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_item_export"
        android:title="@string/menu_item_export_title"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_item_import"
        android:title="@string/menu_item_import_title"
        app:showAsAction="never"
        />

    <item
        android:icon="@drawable/ic_sort_variant"
        android:title="@string/menu_item_sort_title"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/menu_item_sort_hostname"
                android:title="@string/menu_item_sort_hostname_title"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/menu_item_sort_label"
                android:title="@string/menu_item_sort_label_title"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/menu_item_sort_newest"
                android:title="@string/menu_item_sort_newest_title"
                app:showAsAction="never"
                />
        </menu>
    </item>

</menu>