<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    >

    <TextView
        style="@style/labelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/host_label_label"
        />

    <EditText
        android:id="@+id/host_label_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:hint="@string/host_label_hint"
        android:inputType="text"
        android:singleLine="true"
        />

    <TextView
        style="@style/labelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/host_name_label"
        />

    <EditText
        android:id="@+id/host_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:hint="@string/host_name_hint"
        android:inputType="text"
        android:singleLine="true"
        />

</LinearLayout>