<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    >

    <TextView
        style="@style/labelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delay_label"
        />

    <EditText
        android:id="@+id/delay_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="4"
        android:hint="@string/delay_hint"
        android:inputType="number"
        android:maxLength="4"
        android:singleLine="true"
        />

    <TextView
        style="@style/labelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_app_label"
        />

    <Spinner
        android:id="@+id/launch_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        />

</LinearLayout>